# shellshock-logic

./: .gitignore  Cargo.toml  Dockerfile  ENDPOINTS.md  FRONTEND_PROMPT.md  README.md  skills-lock.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/buckshot/: Cargo.toml
anchor/programs/buckshot/src/: lib.rs
shellshock/: Anchor.toml
shellshock/programs/shellshock/: Cargo.toml
shellshock/programs/shellshock/src/: lib.rs
shellshock/tests/: shellshock.ts
src/: handlers.rs  logic.rs  main.rs  models.rs  pve_handlers.rs  relay.rs  solana.rs
