[package]
name = "shellshock-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime", "bson-chrono-0_4"] }
bson = { version = "2.10", features = ["chrono-0_4", "uuid-1"] }
solana-sdk = "1.18"
solana-client = "1.18"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
bs58 = "0.5"
rand = "0.8"
